--- a/app/src/main/res/navigation/news_nav_graph.xml
+++ b/app/src/main/res/navigation/news_nav_graph.xml
@@ -32,6 +32,6 @@
         android:label="ArticleFragment" >
         <argument
             android:name="article"
-            app:argType="com.example.newsprojectpractice.models.Article" />
+            app:argType="com.manu.newsapplication.model.Article" />
     </fragment>
 </navigation>
